--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "webpack": "webpack",
     "webpack-dev-server": "webpack-dev-server --history-api-fallback",
     "prod": "npm run webpack -- --env.mode production --env.presets serviceworker",
-    "dev": "npm run webpack-dev-server -- --env.mode development",
+    "startClient": "npm run webpack-dev-server -- --env.mode development",
+    "dev": "concurrently \"npm run startClient\" \"cd custom_server && node server.js\" \"polymer serve --compile never\"",
     "dev:sw": "npm run webpack-dev-server -- --env.mode development  --env.presets serviceworker"
   },
   "repository": {
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/vaadin-learning-center/lit-element-tutorial-00-starter#readme",
   "devDependencies": {
+    "axios": "^0.19.0",
     "@babel/core": "^7.1.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.5",
@@ -37,6 +39,10 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.3",
+    "concurrently": "^4.1.2",
+    "express": "^4.17.1",
+    "express-graphql": "^0.7.1",
+    "cors": "^2.8.5",
     "workbox-webpack-plugin": "^3.3.1"
   },
   "dependencies": {
