--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webpack-dev-server": "webpack-dev-server --history-api-fallback",
     "prod": "npm run webpack -- --env.mode production --env.presets serviceworker",
     "startClient": "npm run webpack-dev-server -- --env.mode development",
-    "dev": "concurrently \"npm run startClient\" \"cd custom_server && node server.js\" \"polymer serve --compile never\"",
+    "dev": "concurrently \"npm run startClient\" \"cd custom_server && nodemon server.js\" \"polymer serve --compile never\"",
     "dev:sw": "npm run webpack-dev-server -- --env.mode development  --env.presets serviceworker"
   },
   "repository": {
@@ -56,6 +56,7 @@
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
     "graphql-tag": "^2.10.1",
-    "lit-element": "^2.2.1"
+    "lit-element": "^2.2.1",
+    "nodemon": "^1.19.4"
   }
 }
