--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "webpack-dev-server": "webpack-dev-server --history-api-fallback",
     "prod": "npm run webpack -- --env.mode production --env.presets serviceworker",
     "startClient": "npm run webpack-dev-server -- --env.mode development",
-    "dev": "concurrently \"npm run startClient\" \"cd custom_server && nodemon server.js\" \"polymer serve --compile never\"",
+    "dev": "concurrently \"npm run startClient\" \"npm run devServer\" \"polymer serve --compile never\"",
+    "devServer": "nodemon custom_server/server.js --ext js,graphql --exec babel-node",
     "dev:sw": "npm run webpack-dev-server -- --env.mode development  --env.presets serviceworker"
   },
   "repository": {
@@ -43,7 +44,13 @@
     "express": "^4.17.1",
     "express-graphql": "^0.7.1",
     "cors": "^2.8.5",
-    "workbox-webpack-plugin": "^3.3.1"
+    "workbox-webpack-plugin": "^3.3.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@babel/plugin-transform-arrow-functions": "^7.2.0",
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
     "@apollo-elements/lit-apollo": "^1.1.1",
@@ -52,11 +59,13 @@
     "@vaadin/vaadin-radio-button": "^1.2.3",
     "@vaadin/vaadin-text-field": "^2.4.13",
     "@webcomponents/webcomponentsjs": "^2.1.3",
+    "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.16",
     "graphql-tag": "^2.10.1",
+    "graphql-yoga": "^1.17.4",
     "lit-element": "^2.2.1",
-    "nodemon": "^1.19.4"
+    "uuidv4": "^5.0.1"
   }
 }
